--- a/game for 4/main.css
+++ b/game for 4/main.css
@@ -1,47 +1,41 @@
-* {
-}
-html {
-	
-}
-
 body {
-
+	margin: 0 auto 0;
+	padding: 0;
+	width: 1000px;
 }
 
 #workarea {
 	position: relative;
-	margin: 0 auto;
-	padding: 0;
-	width: 1000px;
-	height: 650px;
+	height: 600px;
 	font-style: Verdana, Arial, Times, serif;
 	border: 1px solid black;
 	text-align: center;
 }
 
 .cloud {
-	width: 200px;
+	width: 300px;
 	padding: 30px 0 30px 0;
 	border-radius: 25em/9em;
 	border: 1px solid black;
 }
 
 #cloud1 {
-	position: relative;
+	position: absolute;
 	left: 50%;
 	margin-top: 10px;
-	margin-left: -100px;
+	margin-left: -150px;
 }
 
 #cloud2 {
-	position: relative;
+	position: absolute;
 	left: 100%;
 	top: 50%;
-	margin-left: -200px;
+	margin-top: -30px;
+	margin-left: -310px;
 }
 
 #cloud3 {
-	position: relative;
+	position: absolute;
 	left: 50%;
 	top: 100%;
 	margin-top: -92px;
@@ -49,7 +43,7 @@ body {
 }
 
 #cloud4 {
-	position: relative;
+	position: absolute;
 	top: 50%;
 	margin-top: -30px;
 	margin-left: 10px;
